<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
		
	<ImageView
		android:id="@+id/notification_image"
		android:layout_width="64dip"
		android:layout_height="64dip"
		android:layout_weight="0"
		android:gravity="center"
		android:contentDescription="@string/admin.role.coverArt" />

	<LinearLayout
		android:layout_width="0dip"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_weight="1"
		android:orientation="vertical"
		android:paddingStart="16dp"
		android:paddingEnd="16dp">

		<TextView
			android:id="@+id/notification_title"
			style="@style/NotificationText.Title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:ellipsize="marquee"
			android:focusable="true"
			android:singleLine="true" />

		<TextView
			android:id="@+id/notification_artist"
			style="@style/NotificationText.Content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:ellipsize="end"
			android:scrollHorizontally="true"
			android:singleLine="true" />

		<TextView
			android:id="@+id/notification_album"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone" />
	</LinearLayout>

	<ImageButton
		android:id="@+id/control_previous"
		style="@style/NotificationButton"
		android:contentDescription="@string/skip_backwards"
		android:layout_width="24dp"
		app:srcCompat="@drawable/notification_media_backward" />

	<ImageButton
		android:id="@+id/control_pause"
		app:srcCompat="@drawable/notification_media_pause"
		style="@style/NotificationButton"
		android:layout_width="24dp"
		android:padding="0dip"
		android:contentDescription="@string/pause" />

	<ImageButton
		android:id="@+id/control_next"
		style="@style/NotificationButton"
		android:layout_width="24dp"
		android:contentDescription="@string/skip_forwards"
		app:srcCompat="@drawable/notification_media_forward" />
</LinearLayout>
