<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
    android:layout_height="128dp"
    android:orientation="horizontal" >
		
	<ImageView
	    android:id="@+id/notification_image"
	    android:layout_width="128dp"
	    android:layout_height="128dp"
	    android:gravity="center"
		android:contentDescription="@string/admin.role.coverArt" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notification_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:ellipsize="marquee"
                android:focusable="true"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/notification_close"
                style="@style/NotificationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/common.close"
                android:tint="@color/lightElement"
                app:srcCompat="@drawable/notification_close" />
        </LinearLayout>

        <TextView
            android:id="@+id/notification_artist"
            style="@style/NotificationText.Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/notification_album"
            style="@style/NotificationText.Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="end"
            android:paddingBottom="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <ImageView
            style="@style/NotificationDivider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/divider" />

        <LinearLayout
            style="@style/NotificationLayoutDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageButton
                android:id="@+id/control_previous"
                style="@style/NotificationButton.Expanded"
                android:contentDescription="@string/skip_backwards"
                app:srcCompat="@drawable/media_backward"
                android:tint="@color/lightElement"/>

            <ImageButton
                android:id="@+id/control_pause"
                style="@style/NotificationButton.Expanded"
                android:contentDescription="@string/pause"
                app:srcCompat="@drawable/media_pause"
                android:tint="@color/lightElement"/>

            <ImageButton
                android:id="@+id/control_next"
                style="@style/NotificationButton.Expanded"
                android:contentDescription="@string/skip_forwards"
                app:srcCompat="@drawable/media_forward"
                android:tint="@color/lightElement"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
